--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ edition = "2018"
 tonic = "0.4.1"
 prost = "0.7.0"
 tokio = {version = "1.4.0", features = ["macros", "rt-multi-thread"] }
+tokio-postgres = "0.7.1"
+uuid = "0.8.2"
+async-trait = "0.1.48"
 
 [build-dependencies]
 tonic-build = "0.4.1"
