--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ tonic = "0.4.1"
 prost = "0.7.0"
 tokio = {version = "1.4.0", features = ["macros", "rt-multi-thread"] }
 tokio-postgres = "0.7.1"
-uuid = "0.8.2"
+uuid = {version = "0.8.2", features = ["v4"]}
 async-trait = "0.1.48"
 
 [build-dependencies]
